fixed: cropping of last slide on larger screens; added mr to last slide

--- a/css/main.css
+++ b/css/main.css
@@ -475,6 +475,10 @@
     @apply lg:ml-[calc((100vw-700px)/2)] xl:ml-[calc((100vw-936px)/2)];
   }
 
+  .presentation-slider .presentation-slide:last-of-type {
+    @apply lg:mr-[calc((100vw-700px)/2)] xl:mr-[calc((100vw-936px)/2)];
+  }
+
   .presentation-slide {
     @apply min-w-full gap-4 bg-neutral-four snap-center lg:flex-row lg:min-w-175 lg:h-92 xl:gap-8 xl:min-w-234 xl:h-128.75;
   }
